--- a/_tweets-md/2022/2022-07-01-tweets.md
+++ b/_tweets-md/2022/2022-07-01-tweets.md
@@ -1,3 +1,7 @@
+---    
+date: "2022-07-31"
+time:  23:59:59 +0000
+---
 > RT @simonw: Wow, Inbox Zero for GitHub issues - I can only dream of this for any of my larger projects
 
 <img src="../../media/tweet.ico" width="12" /> [Sat Jul 02 17:13:34 +0000 2022](https://twitter.com/ChristopherA/status/1543281739677634560)
