--- a/_tweets-md/2007/2007-06-01-tweets.md
+++ b/_tweets-md/2007/2007-06-01-tweets.md
@@ -1,30 +1,35 @@
+---    
+date: "2007-06-30"
+time: 23:59:59 +0000
+---
+
 > Preparing my Mac portable for next week's WWDC.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 09 09:04:07 +0000 2007](https://twitter.com/ChristopherA/status/97073952)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 09 09:04:07 +0000 2007](https://twitter.com/ChristopherA/status/97073952)
 
 ----
 
 > Trying to figure out how to keep in sync multiple computers.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 09 18:39:09 +0000 2007](https://twitter.com/ChristopherA/status/97566342)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 09 18:39:09 +0000 2007](https://twitter.com/ChristopherA/status/97566342)
 
 ----
 
 > The red cherries at the farmer's market are fabulous.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 09 19:49:04 +0000 2007](https://twitter.com/ChristopherA/status/97621232)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 09 19:49:04 +0000 2007](https://twitter.com/ChristopherA/status/97621232)
 
 ----
 
 > Sent request for anchor tenants for a new Coworking office in Berkeley to Coworking google group list.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 09 19:50:35 +0000 2007](https://twitter.com/ChristopherA/status/97622482)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 09 19:50:35 +0000 2007](https://twitter.com/ChristopherA/status/97622482)
 
 ----
 
 > Figuring out how to remotely access my servers using RDP and VNC.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jun 10 00:05:46 +0000 2007](https://twitter.com/ChristopherA/status/97817762)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jun 10 00:05:46 +0000 2007](https://twitter.com/ChristopherA/status/97817762)
 
 ----
 
@@ -32,31 +37,31 @@ Replying to [@burtonator](https://twitter.com/burtonator/status/97827722)
 
 > I agree - PalmOS hasn't changed significantly in years, and all the phones are stagnant.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jun 10 00:23:54 +0000 2007](https://twitter.com/ChristopherA/status/97830432)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jun 10 00:23:54 +0000 2007](https://twitter.com/ChristopherA/status/97830432)
 
 ----
 
 > Off to go pick up my Apple WWDC badge.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jun 10 16:24:15 +0000 2007](https://twitter.com/ChristopherA/status/98598322)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jun 10 16:24:15 +0000 2007](https://twitter.com/ChristopherA/status/98598322)
 
 ----
 
 > Off to RPG gaming at friends.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jun 10 18:31:19 +0000 2007](https://twitter.com/ChristopherA/status/98716552)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jun 10 18:31:19 +0000 2007](https://twitter.com/ChristopherA/status/98716552)
 
 ----
 
 > Hmm, there going to make a movie of Pullman's 'The Golden Compass'? Hmm, and it is starring Nicole Kidman. Hmmm...
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jun 10 23:15:10 +0000 2007](https://twitter.com/ChristopherA/status/98950872)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jun 10 23:15:10 +0000 2007](https://twitter.com/ChristopherA/status/98950872)
 
 ----
 
 > Waiting in line for Steve Job's keynote speech at Apple WWDC.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 11 15:48:43 +0000 2007](https://twitter.com/ChristopherA/status/99976312)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 11 15:48:43 +0000 2007](https://twitter.com/ChristopherA/status/99976312)
 
 ----
 
@@ -64,13 +69,13 @@ Replying to [@adonoho](https://twitter.com/adonoho/status/99362622)
 
 > Any other Smartfriends with Twitter?
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 11 15:49:29 +0000 2007](https://twitter.com/ChristopherA/status/99977212)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 11 15:49:29 +0000 2007](https://twitter.com/ChristopherA/status/99977212)
 
 ----
 
 > Heading to bed after a long day at WWDC. The iPhone continues to look fabulous.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jun 12 05:24:16 +0000 2007](https://twitter.com/ChristopherA/status/100921492)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jun 12 05:24:16 +0000 2007](https://twitter.com/ChristopherA/status/100921492)
 
 ----
 
@@ -78,7 +83,7 @@ Replying to [@alevin](https://twitter.com/alevin/status/100588812)
 
 > Windows Safari allows PC developers to test iPhone and Mac compatibility.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jun 12 05:26:05 +0000 2007](https://twitter.com/ChristopherA/status/100923092)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jun 12 05:26:05 +0000 2007](https://twitter.com/ChristopherA/status/100923092)
 
 ----
 
@@ -86,73 +91,73 @@ Replying to [@kevinmarks](https://twitter.com/kevinmarks/status/100763852)
 
 > I must have left Thirsty Bear before you got there. I got a couple of WebKit answers I needed.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jun 12 05:26:59 +0000 2007](https://twitter.com/ChristopherA/status/100923892)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jun 12 05:26:59 +0000 2007](https://twitter.com/ChristopherA/status/100923892)
 
 ----
 
 > What web 2.0 apps are needed for the iPhone that we are not thinking about?
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 13 06:50:08 +0000 2007](https://twitter.com/ChristopherA/status/102529022)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 13 06:50:08 +0000 2007](https://twitter.com/ChristopherA/status/102529022)
 
 ----
 
 > At WWDC - Safari 3.0 finally supports rich text editing, so maybe I can get SynchroEdit to work on it.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 13 21:22:59 +0000 2007](https://twitter.com/ChristopherA/status/103414032)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 13 21:22:59 +0000 2007](https://twitter.com/ChristopherA/status/103414032)
 
 ----
 
 > Started iPhoneWebDev group on google, and created an initial www.iPhoneWebDev.com site.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 13 21:26:31 +0000 2007](https://twitter.com/ChristopherA/status/103417272)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 13 21:26:31 +0000 2007](https://twitter.com/ChristopherA/status/103417272)
 
 ----
 
 > Spent 5 minutes watching twittervision -- I'd heard of it before, but never tried it.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 16 06:49:52 +0000 2007](https://twitter.com/ChristopherA/status/106833952)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 16 06:49:52 +0000 2007](https://twitter.com/ChristopherA/status/106833952)
 
 ----
 
 > Off to Tacubay on 4th St. in Berkeley while the sun shines before the fog rolls in again.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 16 20:17:37 +0000 2007](https://twitter.com/ChristopherA/status/107594382)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 16 20:17:37 +0000 2007](https://twitter.com/ChristopherA/status/107594382)
 
 ----
 
 > Woke up pleased that today was not a foggy day like yesterday. Maybe a good day for a visit in the park.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jun 17 18:29:00 +0000 2007](https://twitter.com/ChristopherA/status/108696612)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jun 17 18:29:00 +0000 2007](https://twitter.com/ChristopherA/status/108696612)
 
 ----
 
 > Cleaning out my laptop post-WWDC
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jun 17 23:23:59 +0000 2007](https://twitter.com/ChristopherA/status/108931062)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jun 17 23:23:59 +0000 2007](https://twitter.com/ChristopherA/status/108931062)
 
 ----
 
 > Tivo surfing
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 18 04:39:01 +0000 2007](https://twitter.com/ChristopherA/status/109210632)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 18 04:39:01 +0000 2007](https://twitter.com/ChristopherA/status/109210632)
 
 ----
 
 > At Supernova Open Space / Unconference
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jun 19 16:23:34 +0000 2007](https://twitter.com/ChristopherA/status/111572282)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jun 19 16:23:34 +0000 2007](https://twitter.com/ChristopherA/status/111572282)
 
 ----
 
 > Just finished a nice iPhone session at Supernova Open
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jun 19 18:39:06 +0000 2007](https://twitter.com/ChristopherA/status/111735202)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jun 19 18:39:06 +0000 2007](https://twitter.com/ChristopherA/status/111735202)
 
 ----
 
 > Twitter is stream of consciousness for groups
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jun 19 20:59:27 +0000 2007](https://twitter.com/ChristopherA/status/111893832)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jun 19 20:59:27 +0000 2007](https://twitter.com/ChristopherA/status/111893832)
 
 ----
 
@@ -160,31 +165,31 @@ Replying to [@factoryjoe](https://twitter.com/chrismessina/status/112399502)
 
 > What is pixadex?
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 20 04:29:59 +0000 2007](https://twitter.com/ChristopherA/status/112401942)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 20 04:29:59 +0000 2007](https://twitter.com/ChristopherA/status/112401942)
 
 ----
 
 > Pet sitting for a friend's dog -- interesting change of routine.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jun 20 14:53:30 +0000 2007](https://twitter.com/ChristopherA/status/113117032)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 20 14:53:30 +0000 2007](https://twitter.com/ChristopherA/status/113117032)
 
 ----
 
 > Walked my friends dog before the fog rolled into Berkeley. It is cooling off fast out there.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jun 21 02:51:05 +0000 2007](https://twitter.com/ChristopherA/status/113918532)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 21 02:51:05 +0000 2007](https://twitter.com/ChristopherA/status/113918532)
 
 ----
 
 > Watching some old Mythbusters shows on my TiVo
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 23 06:57:12 +0000 2007](https://twitter.com/ChristopherA/status/116920272)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 23 06:57:12 +0000 2007](https://twitter.com/ChristopherA/status/116920272)
 
 ----
 
 > Beautiful day in Berkeley -- makes me want to procrastinate on cleanup up the house.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 23 17:50:10 +0000 2007](https://twitter.com/ChristopherA/status/117525132)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 23 17:50:10 +0000 2007](https://twitter.com/ChristopherA/status/117525132)
 
 ----
 
@@ -192,112 +197,112 @@ Replying to [@joi](https://twitter.com/Joi/status/117317142)
 
 > - you might want to consider this instead [http://tinyurl.com/28d3a6](http://tinyurl.com/28d3a6)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 23 17:53:34 +0000 2007](https://twitter.com/ChristopherA/status/117528402)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 23 17:53:34 +0000 2007](https://twitter.com/ChristopherA/status/117528402)
 
 ----
 
 > I am totally puzzled by the barcamp pbwiki email notification. I can't seem to find where change the settings for individual pages.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 23 18:31:24 +0000 2007](https://twitter.com/ChristopherA/status/117568282)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 23 18:31:24 +0000 2007](https://twitter.com/ChristopherA/status/117568282)
 
 ----
 
 > Posted tentative plans for iPhone Dev Camp's Hack-a-Thon at [https://barcamp.pbwiki.com/iPhoneDevCampHackAThon](https://barcamp.pbwiki.com/iPhoneDevCampHackAThon)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 23 19:07:32 +0000 2007](https://twitter.com/ChristopherA/status/117600182)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 23 19:07:32 +0000 2007](https://twitter.com/ChristopherA/status/117600182)
 
 ----
 
 > Having some friends over for a game, then BBQ.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 23 20:10:15 +0000 2007](https://twitter.com/ChristopherA/status/117652532)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 23 20:10:15 +0000 2007](https://twitter.com/ChristopherA/status/117652532)
 
 ----
 
 > Chilly but sunny morning.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jun 24 15:47:30 +0000 2007](https://twitter.com/ChristopherA/status/118649442)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jun 24 15:47:30 +0000 2007](https://twitter.com/ChristopherA/status/118649442)
 
 ----
 
 > Wonder if I can hire someone to stand in the iPhone line for me on Friday. So annoying.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jun 25 17:18:02 +0000 2007](https://twitter.com/ChristopherA/status/120242122)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 25 17:18:02 +0000 2007](https://twitter.com/ChristopherA/status/120242122)
 
 ----
 
 > Heading over the Emeryville Apple Store to get in line for 2 iPhones so I can start doing development.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 29 18:49:59 +0000 2007](https://twitter.com/ChristopherA/status/126637022)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 29 18:49:59 +0000 2007](https://twitter.com/ChristopherA/status/126637022)
 
 ----
 
 > In line at Apple Store in Emeryville -- too bright outside to use laptop, but there is wifi.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 29 19:34:20 +0000 2007](https://twitter.com/ChristopherA/status/126690542)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 29 19:34:20 +0000 2007](https://twitter.com/ChristopherA/status/126690542)
 
 ----
 
 > Someone here has an old windup grammophone labeled as an "original iPhonograph"
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 29 20:32:16 +0000 2007](https://twitter.com/ChristopherA/status/126760492)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 29 20:32:16 +0000 2007](https://twitter.com/ChristopherA/status/126760492)
 
 ----
 
 > About 150 people here in the Emeryville iPhone store line, and there is an AT&T store across the street with a much smaller line.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 29 20:34:23 +0000 2007](https://twitter.com/ChristopherA/status/126763402)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 29 20:34:23 +0000 2007](https://twitter.com/ChristopherA/status/126763402)
 
 ----
 
 > Hopefully last photo taken using old cell phone, while waiting in line for iPhone: [http://www.flickr.com/photos/christophera/664308600/](http://www.flickr.com/photos/christophera/664308600/)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 29 21:02:29 +0000 2007](https://twitter.com/ChristopherA/status/126796092)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 29 21:02:29 +0000 2007](https://twitter.com/ChristopherA/status/126796092)
 
 ----
 
 > iLaunch PDT -2.5 hours
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 29 22:29:52 +0000 2007](https://twitter.com/ChristopherA/status/126909192)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 29 22:29:52 +0000 2007](https://twitter.com/ChristopherA/status/126909192)
 
 ----
 
 > iQueue
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jun 29 22:38:33 +0000 2007](https://twitter.com/ChristopherA/status/126922942)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 29 22:38:33 +0000 2007](https://twitter.com/ChristopherA/status/126922942)
 
 ----
 
 > Cold breeze from SF
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 30 00:09:55 +0000 2007](https://twitter.com/ChristopherA/status/127028462)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 30 00:09:55 +0000 2007](https://twitter.com/ChristopherA/status/127028462)
 
 ----
 
 > Cool breeze from SF Bay chilling everyone in the Emeryville iPhone line.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 30 00:10:19 +0000 2007](https://twitter.com/ChristopherA/status/127028892)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 30 00:10:19 +0000 2007](https://twitter.com/ChristopherA/status/127028892)
 
 ----
 
 > Have iPhones, can't activate them because AT&T/Singular wants more info that I can only give at a store (I presume a credit card impression)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 30 07:02:43 +0000 2007](https://twitter.com/ChristopherA/status/127494872)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 30 07:02:43 +0000 2007](https://twitter.com/ChristopherA/status/127494872)
 
 ----
 
 > Beginning to help people debug iPhone web apps in www.iPhoneWebDev.com list.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 30 14:37:50 +0000 2007](https://twitter.com/ChristopherA/status/127882062)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 30 14:37:50 +0000 2007](https://twitter.com/ChristopherA/status/127882062)
 
 ----
 
 > First twitter using iPhone - using hahlo.com client. Not polished but works.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 30 17:01:41 +0000 2007](https://twitter.com/ChristopherA/status/128038422)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 30 17:01:41 +0000 2007](https://twitter.com/ChristopherA/status/128038422)
 
 ----
 
 > First twitter using iPhone - using hahlo.com client. Not polished but works.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jun 30 17:02:24 +0000 2007](https://twitter.com/ChristopherA/status/128039062)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 30 17:02:24 +0000 2007](https://twitter.com/ChristopherA/status/128039062)
