--- a/_tweets-md/2007/2007-12-01-tweets.md
+++ b/_tweets-md/2007/2007-12-01-tweets.md
@@ -1,14 +1,19 @@
+---    
+date: "2007-12-31"
+time: 23:59:59 +0000
+---
+
 Replying to [@factoryjoe](https://twitter.com/chrismessina/status/483030582)
 
 > What do you think about FeedSync [http://dev.live.com/feedsync/spec/v1.htm](http://dev.live.com/feedsync/spec/v1.htm)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Dec 09 09:42:05 +0000 2007](https://twitter.com/ChristopherA/status/483058762)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Dec 09 09:42:05 +0000 2007](https://twitter.com/ChristopherA/status/483058762)
 
 ----
 
 > Today's Blondie comic strip [http://www.blondie.com/dailies/index.asp](http://www.blondie.com/dailies/index.asp) is surprisingly on target regarding appeal of blogosphere.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Dec 10 22:49:41 +0000 2007](https://twitter.com/ChristopherA/status/488024672)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Dec 10 22:49:41 +0000 2007](https://twitter.com/ChristopherA/status/488024672)
 
 ----
 
@@ -16,7 +21,7 @@ Replying to [@ravenzachary](https://twitter.com/ravenzachary/status/505097252)
 
 > Finally got a hang drum (my Christmas present to self). Now to learn how to play it. Right hand sounds good, left is weak.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Dec 18 18:30:12 +0000 2007](https://twitter.com/ChristopherA/status/511761072)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 18 18:30:12 +0000 2007](https://twitter.com/ChristopherA/status/511761072)
 
 ----
 
@@ -24,7 +29,7 @@ Replying to [@dom](https://twitter.com/dom/status/508403192)
 
 > I plan to post some videos of the hang. LIttle embarrassed of weak left hand -- comes from playing right-handed middle-eastern rhythms.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Dec 18 18:50:13 +0000 2007](https://twitter.com/ChristopherA/status/511810142)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 18 18:50:13 +0000 2007](https://twitter.com/ChristopherA/status/511810142)
 
 ----
 
@@ -32,13 +37,13 @@ Replying to [@ravenzachary](https://twitter.com/ravenzachary/status/511816052)
 
 > Unfortunately, no. They are nearly impossible to get these days. I'm on waiting list from manufacturer in 2009. Expensive eBay
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Dec 18 21:16:06 +0000 2007](https://twitter.com/ChristopherA/status/512168802)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 18 21:16:06 +0000 2007](https://twitter.com/ChristopherA/status/512168802)
 
 ----
 
 > My cough is finally 98% gone, and my energy mostly back. But dreary rainy day is getting me down. Time for caffeine.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Dec 18 21:18:29 +0000 2007](https://twitter.com/ChristopherA/status/512174492)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 18 21:18:29 +0000 2007](https://twitter.com/ChristopherA/status/512174492)
 
 ----
 
@@ -46,7 +51,7 @@ Replying to [@evhead](https://twitter.com/evhead/status/145454532)
 
 > Is that "Today's Twitters" in your blog a new automated thing? I'd like to know how.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Dec 18 23:13:04 +0000 2007](https://twitter.com/ChristopherA/status/512457352)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 18 23:13:04 +0000 2007](https://twitter.com/ChristopherA/status/512457352)
 
 ----
 
@@ -54,7 +59,7 @@ Replying to [@ravenzachary](https://twitter.com/ravenzachary/status/512959222)
 
 > Google Reader. Learn to use keyboard commands. Use star in list view to mark topics you want to read. Then read star items.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Dec 19 18:31:48 +0000 2007](https://twitter.com/ChristopherA/status/515172822)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Dec 19 18:31:48 +0000 2007](https://twitter.com/ChristopherA/status/515172822)
 
 ----
 
@@ -62,7 +67,7 @@ Replying to [@rycaut](https://twitter.com/rycaut/status/513322242)
 
 > I'd love your comments on Rainbow's End at forums.xenagia.com.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Dec 19 18:33:43 +0000 2007](https://twitter.com/ChristopherA/status/515178372)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Dec 19 18:33:43 +0000 2007](https://twitter.com/ChristopherA/status/515178372)
 
 ----
 
@@ -70,7 +75,7 @@ Replying to [@raines](https://twitter.com/raines/status/516005662)
 
 > Where did you find a cheaper storage? How much?
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Dec 20 01:08:46 +0000 2007](https://twitter.com/ChristopherA/status/516148842)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 20 01:08:46 +0000 2007](https://twitter.com/ChristopherA/status/516148842)
 
 ----
 
@@ -78,13 +83,13 @@ Replying to [@davewiner](https://twitter.com/davewiner/status/515999102)
 
 > The 2TB drives typically have two 1TB drives in JBOD raid mode. The problem with this is that mean time between failure x2+
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Dec 20 01:12:19 +0000 2007](https://twitter.com/ChristopherA/status/516157402)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 20 01:12:19 +0000 2007](https://twitter.com/ChristopherA/status/516157402)
 
 ----
 
 > Had a nice pajama Christmas with M. Relaxed, watched DVDs, opened one present an hour, cooked a turkey and cookies, and feasted. Nice X-mas.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Dec 27 02:19:55 +0000 2007](https://twitter.com/ChristopherA/status/536534692)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 27 02:19:55 +0000 2007](https://twitter.com/ChristopherA/status/536534692)
 
 ----
 
@@ -92,7 +97,7 @@ Replying to [@raines](https://twitter.com/raines/status/536379412)
 
 > I'd like to take a look at your #OLPC before the deadline is up. Can we arrange that.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Dec 27 02:21:06 +0000 2007](https://twitter.com/ChristopherA/status/536537472)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 27 02:21:06 +0000 2007](https://twitter.com/ChristopherA/status/536537472)
 
 ----
 
@@ -100,16 +105,16 @@ Replying to [@seanosteen](https://twitter.com/@seanosteen/status/535413742)
 
 > I'd like to come by and see your #OLPC before the deadline ends. You going to be at #BerkeleyCoworking this week?
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Dec 27 05:58:47 +0000 2007](https://twitter.com/ChristopherA/status/536995332)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 27 05:58:47 +0000 2007](https://twitter.com/ChristopherA/status/536995332)
 
 ----
 
 > I'm at #berkekeycowork for a little while this afternoon.
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Dec 27 22:47:10 +0000 2007](https://twitter.com/ChristopherA/status/539278592)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 27 22:47:10 +0000 2007](https://twitter.com/ChristopherA/status/539278592)
 
 ----
 
 > Back from Juno (great movie with top notch writing) and dinner at T-Rex (great Berkeley BBQ), now to hot tub and new year!
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jan 01 06:53:58 +0000 2008](https://twitter.com/ChristopherA/status/551677592)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 01 06:53:58 +0000 2008](https://twitter.com/ChristopherA/status/551677592)
